@@ -45,13 +45,15 @@ public class ResourceListIconRenderer extends DefaultTreeCellRenderer
     {
         Component ret = super.getTreeCellRendererComponent(tree, value, selected, expanded, leaf, row, hasFocus);
 
-        if (value instanceof ResourceTreeNode node)
+        if (value instanceof ResourceTreeNode)
         {
             if (iconCache.containsKey(value))
             {
                 setIcon(iconCache.get(value));
                 return ret;
             }
+
+            ResourceTreeNode node = (ResourceTreeNode) value;
 
             String nameOG = node.toString();
             String name = nameOG.toLowerCase();
@@ -99,7 +101,7 @@ public class ResourceListIconRenderer extends DefaultTreeCellRenderer
                         finished = true;
                     else
                     {
-                        TreeNode treeNode = nodes.getFirst();
+                        TreeNode treeNode = nodes.get(0);
                         nodes.remove(treeNode);
                         int children = treeNode.getChildCount();
                         if (children >= 1)
